# faculty-search

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  api.py  app.py  community_map.py  crawl.py  crossref.py  data.py  docker-compose-dev.yml  docker-compose.yml  explore_cdis.html  gcp.tf  main.py  nginx.conf  orcid.py  pyproject.toml  req_freeze.txt  requirements.txt  updater.py  working.ipynb
.devcontainer/: devcontainer-template.json  devcontainer.json  post_create.sh  requirements.txt
api/: Dockerfile  api.py  core.py  data_model.py  requirements.txt
authors/: 0000-0001-6046-9634.json  0000-0001-6425-3769.json  0000-0001-6908-9240.json  0000-0001-7079-4473.json  0000-0001-7438-4228.json  0000-0001-7973-2842.json  0000-0001-8464-3334.json  0000-0001-8493-8001.json  0000-0001-8533-6061.json  0000-0001-8678-670X.json  0000-0001-9038-878X.json  0000-0001-9172-6461.json  0000-0001-9188-8575.json  0000-0001-9210-8948.json  0000-0001-9849-7358.json  0000-0002-0719-9695.json  0000-0002-0820-6084.json  0000-0002-1209-9699.json  0000-0002-1798-4830.json  0000-0002-2640-4949.json  0000-0002-2700-4605.json  0000-0002-3777-7791.json  0000-0002-4130-7602.json  0000-0002-4395-0132.json  0000-0002-4687-4913.json  0000-0002-4914-6671.json  0000-0002-5226-6041.json  0000-0002-5324-9833.json  0000-0002-5769-7094.json  0000-0002-5864-5333.json  0000-0002-6053-6232.json  0000-0002-6368-4652.json  0000-0002-7040-548X.json  0000-0002-7119-9358.json  0000-0002-7608-8550.json  0000-0002-8111-7651.json  0000-0002-8428-1086.json  0000-0002-8428-1086.pickle  0000-0002-8924-5885.json  0000-0002-9298-9412.json  (+25 more)
embedding_search/: academic_analytics.py  api.py  community_map.py  crossref.py  data_model.py  orcid.py  preprocess.py  utils.py  vector_store.py  visualize.py
(+248 files in other folders)
