[project]
name = "embedding-search"
description = "experimental user search and visualization using embedding"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Jason Lo", email = "jason.lo@wisc.edu" }
]
dependencies = [
    "langchain",
    "openai",
    "pypdf",
    "tiktoken"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "embedding_search/__about__.py"