[project]
name = "embedding-search"
description = "experimental user search and visualization using embedding"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "Jason Lo", email = "jason.lo@wisc.edu" }
]
dependencies = [
    "langchain==0.0.308",
    "ipykernel==6.25.2",
    "altair==5.1.1",
    "python-dotenv==1.0.0",
    "openai==0.28.1",
    "tiktoken==0.5.1",
    "scikit-learn==1.3.0",
    "streamlit==1.26.0",
    "beautifulsoup4==4.12.2",
    "fastapi==0.103.1",
    "uvicorn==0.23.2",
    "pymilvus==2.3.0",
    "google-cloud-storage==2.10.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "embedding_search/__about__.py"